update with 56 changes

--- a/note/afplay.html
+++ b/note/afplay.html
@@ -60,7 +60,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org8a68ecb">사용법</a></li>
+<li><a href="#orgd9ae193">사용법</a></li>
 </ul>
 </div>
 </div>
@@ -70,9 +70,9 @@ afplay는 Audio File Play의 약자로
 오디오 파일 플레이어 유틸리티다.
 </p>
 
-<div id="outline-container-org8a68ecb" class="outline-2">
-<h2 id="org8a68ecb">사용법</h2>
-<div class="outline-text-2" id="text-org8a68ecb">
+<div id="outline-container-orgd9ae193" class="outline-2">
+<h2 id="orgd9ae193">사용법</h2>
+<div class="outline-text-2" id="text-orgd9ae193">
 <div class="org-src-container">
 <pre class="src src-bash">afplay /foo/bar/audio.mp3
 </pre>
@@ -92,10 +92,22 @@ afplay는 Audio File Play의 약자로
 </ul>
 </div>
 </div>
-</section>
 <div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+</section>
+<div class="side-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
