--- a/note/caffeinate.html
+++ b/note/caffeinate.html
@@ -60,11 +60,11 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgee977e9">사용법</a>
+<li><a href="#org59d84dd">사용법</a>
 <ul>
-<li><a href="#orga1d298b">무제한 잠자기 방지</a></li>
-<li><a href="#org1acf932">지정된 시간 동안 잠자기 방지</a></li>
-<li><a href="#orgfd37aee">특정 프로세스 구동 동안 잠자기 방지</a></li>
+<li><a href="#org854508e">무제한 잠자기 방지</a></li>
+<li><a href="#org743ff26">지정된 시간 동안 잠자기 방지</a></li>
+<li><a href="#orgc608fee">특정 프로세스 구동 동안 잠자기 방지</a></li>
 </ul>
 </li>
 </ul>
@@ -75,13 +75,13 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 <a href="macos.html">macOS</a> 전용 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-orgee977e9" class="outline-2">
-<h2 id="orgee977e9">사용법</h2>
-<div class="outline-text-2" id="text-orgee977e9">
+<div id="outline-container-org59d84dd" class="outline-2">
+<h2 id="org59d84dd">사용법</h2>
+<div class="outline-text-2" id="text-org59d84dd">
 </div>
-<div id="outline-container-orga1d298b" class="outline-3">
-<h3 id="orga1d298b">무제한 잠자기 방지</h3>
-<div class="outline-text-3" id="text-orga1d298b">
+<div id="outline-container-org854508e" class="outline-3">
+<h3 id="org854508e">무제한 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org854508e">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate
 </pre>
@@ -92,9 +92,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org1acf932" class="outline-3">
-<h3 id="org1acf932">지정된 시간 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org1acf932">
+<div id="outline-container-org743ff26" class="outline-3">
+<h3 id="org743ff26">지정된 시간 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org743ff26">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -t <span style="color: #da8548; font-weight: bold;">3600</span>
 </pre>
@@ -105,9 +105,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-orgfd37aee" class="outline-3">
-<h3 id="orgfd37aee">특정 프로세스 구동 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-orgfd37aee">
+<div id="outline-container-orgc608fee" class="outline-3">
+<h3 id="orgc608fee">특정 프로세스 구동 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-orgc608fee">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -i <span style="color: #ECBE7B;">make</span>
 </pre>
@@ -118,10 +118,22 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 </div>
-</section>
 <div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+</section>
+<div class="side-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
