--- a/note/homebrew.html
+++ b/note/homebrew.html
@@ -60,22 +60,22 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org39febbb">기본 사용법</a>
+<li><a href="#org90793f9">기본 사용법</a>
 <ul>
-<li><a href="#org4dacee6">패키지 검색</a></li>
-<li><a href="#org3f55402">패키지 정보</a></li>
-<li><a href="#org8ac3f85">패키지 설치</a></li>
-<li><a href="#orge77b5c7">만료된 버전 확인</a></li>
-<li><a href="#org343daaf">패키지 업그레이드</a></li>
-<li><a href="#orga7ac764">구 버전 삭제하기</a></li>
-<li><a href="#org78fd9fa">패키지 삭제(uninstall)</a></li>
-<li><a href="#orge61427e">의사 양반(?)</a></li>
+<li><a href="#orge444b8d">패키지 검색</a></li>
+<li><a href="#org2c394fa">패키지 정보</a></li>
+<li><a href="#org0e19cf4">패키지 설치</a></li>
+<li><a href="#orgfa7fbc3">만료된 버전 확인</a></li>
+<li><a href="#org99cfb04">패키지 업그레이드</a></li>
+<li><a href="#org65e9fd6">구 버전 삭제하기</a></li>
+<li><a href="#org5d5ef95">패키지 삭제(uninstall)</a></li>
+<li><a href="#org6350b21">의사 양반(?)</a></li>
 </ul>
 </li>
-<li><a href="#org5be69b1">구 버전 패키지 사용하기</a></li>
-<li><a href="#org04a6b5b">다중 버전을 제공하는 패키지의 경우</a></li>
-<li><a href="#orgad5e7c2">Cask</a></li>
-<li><a href="#org06ac1eb">외부 링크</a></li>
+<li><a href="#orgb5c6147">구 버전 패키지 사용하기</a></li>
+<li><a href="#org092d80a">다중 버전을 제공하는 패키지의 경우</a></li>
+<li><a href="#org7c45659">Cask</a></li>
+<li><a href="#org5a8e0be">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -86,31 +86,31 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 또한 root 사용자가 아니어도 사용할 수도 있도록 구조를 만들어 준다는 점도 특징이다.
 </p>
 
-<div id="outline-container-org39febbb" class="outline-2">
-<h2 id="org39febbb">기본 사용법</h2>
-<div class="outline-text-2" id="text-org39febbb">
+<div id="outline-container-org90793f9" class="outline-2">
+<h2 id="org90793f9">기본 사용법</h2>
+<div class="outline-text-2" id="text-org90793f9">
 </div>
-<div id="outline-container-org4dacee6" class="outline-3">
-<h3 id="org4dacee6">패키지 검색</h3>
-<div class="outline-text-3" id="text-org4dacee6">
+<div id="outline-container-orge444b8d" class="outline-3">
+<h3 id="orge444b8d">패키지 검색</h3>
+<div class="outline-text-3" id="text-orge444b8d">
 <div class="org-src-container">
 <pre class="src src-bash">brew search KEYWORD
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org3f55402" class="outline-3">
-<h3 id="org3f55402">패키지 정보</h3>
-<div class="outline-text-3" id="text-org3f55402">
+<div id="outline-container-org2c394fa" class="outline-3">
+<h3 id="org2c394fa">패키지 정보</h3>
+<div class="outline-text-3" id="text-org2c394fa">
 <div class="org-src-container">
 <pre class="src src-bash">brew info PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org8ac3f85" class="outline-3">
-<h3 id="org8ac3f85">패키지 설치</h3>
-<div class="outline-text-3" id="text-org8ac3f85">
+<div id="outline-container-org0e19cf4" class="outline-3">
+<h3 id="org0e19cf4">패키지 설치</h3>
+<div class="outline-text-3" id="text-org0e19cf4">
 <div class="org-src-container">
 <pre class="src src-bash">brew install PACKAGE_NAME
 </pre>
@@ -121,9 +121,9 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 </p>
 </div>
 </div>
-<div id="outline-container-orge77b5c7" class="outline-3">
-<h3 id="orge77b5c7">만료된 버전 확인</h3>
-<div class="outline-text-3" id="text-orge77b5c7">
+<div id="outline-container-orgfa7fbc3" class="outline-3">
+<h3 id="orgfa7fbc3">만료된 버전 확인</h3>
+<div class="outline-text-3" id="text-orgfa7fbc3">
 <p>
 설치된 패키지의 최신 버전이 존재하는지 확인하려면 <code>update</code> 후
 <code>outdated</code> 를 살펴보자.
@@ -135,9 +135,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org343daaf" class="outline-3">
-<h3 id="org343daaf">패키지 업그레이드</h3>
-<div class="outline-text-3" id="text-org343daaf">
+<div id="outline-container-org99cfb04" class="outline-3">
+<h3 id="org99cfb04">패키지 업그레이드</h3>
+<div class="outline-text-3" id="text-org99cfb04">
 <div class="org-src-container">
 <pre class="src src-bash">brew upgrade PACKAGE_NAME
 </pre>
@@ -151,9 +151,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-orga7ac764" class="outline-3">
-<h3 id="orga7ac764">구 버전 삭제하기</h3>
-<div class="outline-text-3" id="text-orga7ac764">
+<div id="outline-container-org65e9fd6" class="outline-3">
+<h3 id="org65e9fd6">구 버전 삭제하기</h3>
+<div class="outline-text-3" id="text-org65e9fd6">
 <p>
 패키지를 업그레이드해도 구 버전은 그대로 남아 파일 시스템에 잔존한다.
 이를 청소하기 위해 <code>cleanup</code> 커맨드를 사용할 수 있다.
@@ -167,18 +167,18 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-org78fd9fa" class="outline-3">
-<h3 id="org78fd9fa">패키지 삭제(uninstall)</h3>
-<div class="outline-text-3" id="text-org78fd9fa">
+<div id="outline-container-org5d5ef95" class="outline-3">
+<h3 id="org5d5ef95">패키지 삭제(uninstall)</h3>
+<div class="outline-text-3" id="text-org5d5ef95">
 <div class="org-src-container">
 <pre class="src src-bash">brew uninstall PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-orge61427e" class="outline-3">
-<h3 id="orge61427e">의사 양반(?)</h3>
-<div class="outline-text-3" id="text-orge61427e">
+<div id="outline-container-org6350b21" class="outline-3">
+<h3 id="org6350b21">의사 양반(?)</h3>
+<div class="outline-text-3" id="text-org6350b21">
 <div class="org-src-container">
 <pre class="src src-bash">brew doctor
 </pre>
@@ -189,9 +189,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org5be69b1" class="outline-2">
-<h2 id="org5be69b1">구 버전 패키지 사용하기</h2>
-<div class="outline-text-2" id="text-org5be69b1">
+<div id="outline-container-orgb5c6147" class="outline-2">
+<h2 id="orgb5c6147">구 버전 패키지 사용하기</h2>
+<div class="outline-text-2" id="text-orgb5c6147">
 <p>
 만약 <code>upgrade</code> 등으로 최신버전이 설치되었다면
 해당 패키지의 구 버전도 여전히 파일 시스템에 남아있다.
@@ -206,9 +206,9 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-org04a6b5b" class="outline-2">
-<h2 id="org04a6b5b">다중 버전을 제공하는 패키지의 경우</h2>
-<div class="outline-text-2" id="text-org04a6b5b">
+<div id="outline-container-org092d80a" class="outline-2">
+<h2 id="org092d80a">다중 버전을 제공하는 패키지의 경우</h2>
+<div class="outline-text-2" id="text-org092d80a">
 <p>
 다중 버전의 패키지가 필요한 경우 우선 지원되는지 부터 확인해봐야 한다.
 예를 들어 node.js 의 경우 LTS 버전이 다양하게 제공되고 있다.
@@ -311,9 +311,9 @@ v10.x.x
 </p>
 </div>
 </div>
-<div id="outline-container-orgad5e7c2" class="outline-2">
-<h2 id="orgad5e7c2">Cask</h2>
-<div class="outline-text-2" id="text-orgad5e7c2">
+<div id="outline-container-org7c45659" class="outline-2">
+<h2 id="org7c45659">Cask</h2>
+<div class="outline-text-2" id="text-org7c45659">
 <p>
 cask는 <a href="macos.html">macOS</a> 응용 소프트웨어나
 다양한 리소스를 설치할 수 있게 도와주는 확장 도구다.
@@ -347,18 +347,30 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
 </p>
 </div>
 </div>
-<div id="outline-container-org06ac1eb" class="outline-2">
-<h2 id="org06ac1eb">외부 링크</h2>
-<div class="outline-text-2" id="text-org06ac1eb">
+<div id="outline-container-org5a8e0be" class="outline-2">
+<h2 id="org5a8e0be">외부 링크</h2>
+<div class="outline-text-2" id="text-org5a8e0be">
 <ul class="org-ul">
 <li><a target="_blank" href="https://brew.sh">🌏Homebrew 공식 홈페이지</a></li>
 </ul>
 </div>
 </div>
-</section>
 <div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+</section>
+<div class="side-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
