--- a/note/macos.html
+++ b/note/macos.html
@@ -60,9 +60,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgb9262ba">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#orgc591b11">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#orgc2f5897">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#org3590e07">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#orgb9d4829">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#org24c87d1">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -87,17 +87,17 @@ macOS 는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-orgb9262ba" class="outline-2">
-<h2 id="orgb9262ba">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-orgb9262ba">
+<div id="outline-container-org3590e07" class="outline-2">
+<h2 id="org3590e07">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-org3590e07">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-orgc591b11" class="outline-2">
-<h2 id="orgc591b11">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-orgc591b11">
+<div id="outline-container-orgb9d4829" class="outline-2">
+<h2 id="orgb9d4829">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-orgb9d4829">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -117,9 +117,9 @@ macOS 는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgc2f5897" class="outline-2">
-<h2 id="orgc2f5897">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-orgc2f5897">
+<div id="outline-container-org24c87d1" class="outline-2">
+<h2 id="org24c87d1">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-org24c87d1">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
@@ -136,10 +136,22 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 </p>
 </div>
 </div>
-</section>
 <div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+</section>
+<div class="side-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
