--- a/note/dd.html
+++ b/note/dd.html
@@ -60,9 +60,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org08edf60">SD 카드에서 이미지 덤프하기</a></li>
-<li><a href="#orge2fa506">이미지를 SD 카드에 쓰기</a></li>
-<li><a href="#orgaea67cd">팁</a></li>
+<li><a href="#org54c0638">SD 카드에서 이미지 덤프하기</a></li>
+<li><a href="#org813d58f">이미지를 SD 카드에 쓰기</a></li>
+<li><a href="#org04e2100">팁</a></li>
 </ul>
 </div>
 </div>
@@ -79,9 +79,9 @@ dd는 파일을 변환하거나 복사하는데 사용하는
 Disk Dump의 약자가 아닐까 유추된다.
 </p>
 
-<div id="outline-container-org08edf60" class="outline-2">
-<h2 id="org08edf60">SD 카드에서 이미지 덤프하기</h2>
-<div class="outline-text-2" id="text-org08edf60">
+<div id="outline-container-org54c0638" class="outline-2">
+<h2 id="org54c0638">SD 카드에서 이미지 덤프하기</h2>
+<div class="outline-text-2" id="text-org54c0638">
 <p>
 주로 SD 카드의 내용을 백업할 때 사용한다.
 </p>
@@ -131,9 +131,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-<div id="outline-container-orge2fa506" class="outline-2">
-<h2 id="orge2fa506">이미지를 SD 카드에 쓰기</h2>
-<div class="outline-text-2" id="text-orge2fa506">
+<div id="outline-container-org813d58f" class="outline-2">
+<h2 id="org813d58f">이미지를 SD 카드에 쓰기</h2>
+<div class="outline-text-2" id="text-org813d58f">
 <p>
 백업한 이미지를 이용해 SD 카드나 특정 스토리지에 동일한 내용을 복제하기 위해 사용한다.
 </p>
@@ -155,9 +155,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-<div id="outline-container-orgaea67cd" class="outline-2">
-<h2 id="orgaea67cd">팁</h2>
-<div class="outline-text-2" id="text-orgaea67cd">
+<div id="outline-container-org04e2100" class="outline-2">
+<h2 id="org04e2100">팁</h2>
+<div class="outline-text-2" id="text-org04e2100">
 <p>
 만약 덤프나 이미지 쓰기가 느리다면
 <a href="macos.html">macOS</a>에서는 <code>/dev/diskN</code> 대신 <code>/dev/rdiskN</code> 를 사용해 볼 수도 있다.
@@ -165,10 +165,22 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-</section>
 <div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+</section>
+<div class="side-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
