--- a/note/emacs-lisp.html
+++ b/note/emacs-lisp.html
@@ -60,27 +60,27 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgfcac55e">개념 메모</a>
+<li><a href="#org6f04fd6">개념 메모</a>
 <ul>
-<li><a href="#orgc7cd18a">샤프(Sharpsign)</a></li>
-<li><a href="#orgf6d8454">단 따옴표(Single Quote)</a></li>
-<li><a href="#org89c079a">샤프 단 따옴표(Sharpsign Single Quote)</a></li>
-<li><a href="#org75f1bbb">apply vs funcall</a></li>
-<li><a href="#orgfe37cf7">Character</a></li>
-<li><a href="#org50b12ec">setq vs setq-default</a></li>
-<li><a href="#org4279f54">Comma and Back-Quote</a></li>
+<li><a href="#org7d056d9">샤프(Sharpsign)</a></li>
+<li><a href="#org1b89490">단 따옴표(Single Quote)</a></li>
+<li><a href="#org5464e62">샤프 단 따옴표(Sharpsign Single Quote)</a></li>
+<li><a href="#org201d4c9">apply vs funcall</a></li>
+<li><a href="#org23b68d6">Character</a></li>
+<li><a href="#org09ef989">setq vs setq-default</a></li>
+<li><a href="#org58d4fde">Comma and Back-Quote</a></li>
 </ul>
 </li>
-<li><a href="#orge4b7aaa">코드 예제</a>
+<li><a href="#orga8f8781">코드 예제</a>
 <ul>
-<li><a href="#org5491d90">타입 변환</a></li>
-<li><a href="#org7a5a2af">셸 커맨드</a></li>
+<li><a href="#org0411304">타입 변환</a></li>
+<li><a href="#orgc79594f">셸 커맨드</a></li>
 </ul>
 </li>
-<li><a href="#orgb5b0949">에러 노트</a>
+<li><a href="#org1c95555">에러 노트</a>
 <ul>
-<li><a href="#org96c7fa5">commandp</a></li>
-<li><a href="#org813d20d">안 쓰는 매개변수</a></li>
+<li><a href="#org39892de">commandp</a></li>
+<li><a href="#org2a659c3">안 쓰는 매개변수</a></li>
 </ul>
 </li>
 </ul>
@@ -93,13 +93,13 @@ Lisp 언어를 의미한다.
 형태라서 Lisp이 아니라고 하기에도 좀 미묘하긴 하다.
 </p>
 
-<div id="outline-container-orgfcac55e" class="outline-2">
-<h2 id="orgfcac55e">개념 메모</h2>
-<div class="outline-text-2" id="text-orgfcac55e">
+<div id="outline-container-org6f04fd6" class="outline-2">
+<h2 id="org6f04fd6">개념 메모</h2>
+<div class="outline-text-2" id="text-org6f04fd6">
 </div>
-<div id="outline-container-orgc7cd18a" class="outline-3">
-<h3 id="orgc7cd18a">샤프(Sharpsign)</h3>
-<div class="outline-text-3" id="text-orgc7cd18a">
+<div id="outline-container-org7d056d9" class="outline-3">
+<h3 id="org7d056d9">샤프(Sharpsign)</h3>
+<div class="outline-text-3" id="text-org7d056d9">
 <p>
 <code>#</code> (Sharpsign) 은 s-expressions 특수 문법이다.
 근데 뭔 소린지 하나도 모르겠다.
@@ -119,9 +119,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgf6d8454" class="outline-3">
-<h3 id="orgf6d8454">단 따옴표(Single Quote)</h3>
-<div class="outline-text-3" id="text-orgf6d8454">
+<div id="outline-container-org1b89490" class="outline-3">
+<h3 id="org1b89490">단 따옴표(Single Quote)</h3>
+<div class="outline-text-3" id="text-org1b89490">
 <p>
 단 따옴표 <code>'</code> (혹은 quote 함수)는 식을 그대로 표현할 때 사용한다.
 예를 들어 <code>(1 2 3)</code> 이라는 리스트를 메시지로 출력하고 싶어서
@@ -162,9 +162,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org89c079a" class="outline-3">
-<h3 id="org89c079a">샤프 단 따옴표(Sharpsign Single Quote)</h3>
-<div class="outline-text-3" id="text-org89c079a">
+<div id="outline-container-org5464e62" class="outline-3">
+<h3 id="org5464e62">샤프 단 따옴표(Sharpsign Single Quote)</h3>
+<div class="outline-text-3" id="text-org5464e62">
 <p>
 <code>#'function-name</code> 의 의미는
 <code>(function function-name)</code> 을 줄여서 표기한 것이다.
@@ -186,9 +186,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org75f1bbb" class="outline-3">
-<h3 id="org75f1bbb">apply vs funcall</h3>
-<div class="outline-text-3" id="text-org75f1bbb">
+<div id="outline-container-org201d4c9" class="outline-3">
+<h3 id="org201d4c9">apply vs funcall</h3>
+<div class="outline-text-3" id="text-org201d4c9">
 <p>
 위에서 본 <code>funcall</code> 과 비슷하게 <code>apply</code> 라는 것도 있다.
 사용 방법도 거의 동일하다.
@@ -222,9 +222,9 @@ Lisp 언어를 의미한다.
 </div>
 </div>
 </div>
-<div id="outline-container-orgfe37cf7" class="outline-3">
-<h3 id="orgfe37cf7">Character</h3>
-<div class="outline-text-3" id="text-orgfe37cf7">
+<div id="outline-container-org23b68d6" class="outline-3">
+<h3 id="org23b68d6">Character</h3>
+<div class="outline-text-3" id="text-org23b68d6">
 <p>
 <a href="emacs.html">Emacs</a>에서 문자는 ASCII 번호로 표현된다.
 즉 숫자다.
@@ -240,9 +240,9 @@ A는 65이기 때문에 위 코드는 참을 반환한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org50b12ec" class="outline-3">
-<h3 id="org50b12ec">setq vs setq-default</h3>
-<div class="outline-text-3" id="text-org50b12ec">
+<div id="outline-container-org09ef989" class="outline-3">
+<h3 id="org09ef989">setq vs setq-default</h3>
+<div class="outline-text-3" id="text-org09ef989">
 <p>
 <a href="emacs.html">Emacs</a>에는 버퍼 로컬 변수라는 개념이 있다. 예를 들자면
 <code>tab-width</code> 가 대표적인데, 각 버퍼의 메이저 모드마다 이 변수의 값이 다 다를 수
@@ -260,9 +260,9 @@ A는 65이기 때문에 위 코드는 참을 반환한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org4279f54" class="outline-3">
-<h3 id="org4279f54">Comma and Back-Quote</h3>
-<div class="outline-text-3" id="text-org4279f54">
+<div id="outline-container-org58d4fde" class="outline-3">
+<h3 id="org58d4fde">Comma and Back-Quote</h3>
+<div class="outline-text-3" id="text-org58d4fde">
 <div class="org-src-container">
 <pre class="src src-emacs-lisp"><span style="color: #51afef;">(</span><span style="color: #51afef;">setq</span> a <span style="color: #98be65;">"a's value"</span> b <span style="color: #98be65;">"b's value"</span> c <span style="color: #98be65;">"c's value"</span><span style="color: #51afef;">)</span>
 <span style="color: #51afef;">'</span><span style="color: #51afef;">(</span>a  b  c<span style="color: #51afef;">)</span>      <span style="color: #5B6268;">; </span><span style="color: #5B6268;">=&gt; (a b c)</span>
@@ -277,13 +277,13 @@ evaluated 시킨 결과로 치환 시킨다는 점이 다른 것 같다. 간혹 
 </div>
 </div>
 </div>
-<div id="outline-container-orge4b7aaa" class="outline-2">
-<h2 id="orge4b7aaa">코드 예제</h2>
-<div class="outline-text-2" id="text-orge4b7aaa">
+<div id="outline-container-orga8f8781" class="outline-2">
+<h2 id="orga8f8781">코드 예제</h2>
+<div class="outline-text-2" id="text-orga8f8781">
 </div>
-<div id="outline-container-org5491d90" class="outline-3">
-<h3 id="org5491d90">타입 변환</h3>
-<div class="outline-text-3" id="text-org5491d90">
+<div id="outline-container-org0411304" class="outline-3">
+<h3 id="org0411304">타입 변환</h3>
+<div class="outline-text-3" id="text-org0411304">
 <p>
 숫자(정수 및 실수)와 문자열 간의 전환 두 가지 예제다.
 </p>
@@ -301,9 +301,9 @@ evaluated 시킨 결과로 치환 시킨다는 점이 다른 것 같다. 간혹 
 </p>
 </div>
 </div>
-<div id="outline-container-org7a5a2af" class="outline-3">
-<h3 id="org7a5a2af"><a href="shell.html">셸</a> 커맨드</h3>
-<div class="outline-text-3" id="text-org7a5a2af">
+<div id="outline-container-orgc79594f" class="outline-3">
+<h3 id="orgc79594f"><a href="shell.html">셸</a> 커맨드</h3>
+<div class="outline-text-3" id="text-orgc79594f">
 <p>
 <a href="shell.html">셸</a> 커맨드를 실행시키기 위해 대충 두 가지 함수가 있다.
 </p>
@@ -331,13 +331,13 @@ evaluated 시킨 결과로 치환 시킨다는 점이 다른 것 같다. 간혹 
 </div>
 </div>
 </div>
-<div id="outline-container-orgb5b0949" class="outline-2">
-<h2 id="orgb5b0949">에러 노트</h2>
-<div class="outline-text-2" id="text-orgb5b0949">
+<div id="outline-container-org1c95555" class="outline-2">
+<h2 id="org1c95555">에러 노트</h2>
+<div class="outline-text-2" id="text-org1c95555">
 </div>
-<div id="outline-container-org96c7fa5" class="outline-3">
-<h3 id="org96c7fa5">commandp</h3>
-<div class="outline-text-3" id="text-org96c7fa5">
+<div id="outline-container-org39892de" class="outline-3">
+<h3 id="org39892de">commandp</h3>
+<div class="outline-text-3" id="text-org39892de">
 <blockquote>
 <p>
 Wrong type argument: commandp, your-function
@@ -357,9 +357,9 @@ Wrong type argument: commandp, your-function
 </div>
 </div>
 </div>
-<div id="outline-container-org813d20d" class="outline-3">
-<h3 id="org813d20d">안 쓰는 매개변수</h3>
-<div class="outline-text-3" id="text-org813d20d">
+<div id="outline-container-org2a659c3" class="outline-3">
+<h3 id="org2a659c3">안 쓰는 매개변수</h3>
+<div class="outline-text-3" id="text-org2a659c3">
 <p>
 예를 들어 아래와 같은 코드에서
 </p>
@@ -391,10 +391,22 @@ Unused lexical argument 'bar'
 </div>
 </div>
 </div>
-</section>
 <div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+</section>
+<div class="side-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
