--- a/note/find.html
+++ b/note/find.html
@@ -60,14 +60,14 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orge58a9b0">기본 사용법</a>
+<li><a href="#org1b80c99">기본 사용법</a>
 <ul>
-<li><a href="#orga3a4008">현재 디렉터리에서 특정 파일 검색하기</a></li>
-<li><a href="#orga17eb3f">특정 디렉터리에서 특정 파일 검색하기</a></li>
-<li><a href="#org22ef5ef">검색 패턴</a></li>
-<li><a href="#org2c16f47">대소문자 무시하기</a></li>
-<li><a href="#org1361148">검색 종류 지정하기</a></li>
-<li><a href="#org6d70abb">검색 내용으로 특정 처리하기(exec)</a></li>
+<li><a href="#orge177163">현재 디렉터리에서 특정 파일 검색하기</a></li>
+<li><a href="#orgaf5d1e0">특정 디렉터리에서 특정 파일 검색하기</a></li>
+<li><a href="#org2cf220c">검색 패턴</a></li>
+<li><a href="#org679d6ad">대소문자 무시하기</a></li>
+<li><a href="#org648b6ee">검색 종류 지정하기</a></li>
+<li><a href="#org86204ec">검색 내용으로 특정 처리하기(exec)</a></li>
 </ul>
 </li>
 </ul>
@@ -78,13 +78,13 @@ gtag('config', 'UA-44534026-1');
 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-orge58a9b0" class="outline-2">
-<h2 id="orge58a9b0">기본 사용법</h2>
-<div class="outline-text-2" id="text-orge58a9b0">
+<div id="outline-container-org1b80c99" class="outline-2">
+<h2 id="org1b80c99">기본 사용법</h2>
+<div class="outline-text-2" id="text-org1b80c99">
 </div>
-<div id="outline-container-orga3a4008" class="outline-3">
-<h3 id="orga3a4008">현재 디렉터리에서 특정 파일 검색하기</h3>
-<div class="outline-text-3" id="text-orga3a4008">
+<div id="outline-container-orge177163" class="outline-3">
+<h3 id="orge177163">현재 디렉터리에서 특정 파일 검색하기</h3>
+<div class="outline-text-3" id="text-orge177163">
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">find</span> . -name <span style="color: #98be65;">"somename.ext"</span>
 </pre>
@@ -96,9 +96,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-orga17eb3f" class="outline-3">
-<h3 id="orga17eb3f">특정 디렉터리에서 특정 파일 검색하기</h3>
-<div class="outline-text-3" id="text-orga17eb3f">
+<div id="outline-container-orgaf5d1e0" class="outline-3">
+<h3 id="orgaf5d1e0">특정 디렉터리에서 특정 파일 검색하기</h3>
+<div class="outline-text-3" id="text-orgaf5d1e0">
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">find</span> /foo/bar <span style="color: #98be65;">"somename.ext"</span>
 </pre>
@@ -108,9 +108,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org22ef5ef" class="outline-3">
-<h3 id="org22ef5ef">검색 패턴</h3>
-<div class="outline-text-3" id="text-org22ef5ef">
+<div id="outline-container-org2cf220c" class="outline-3">
+<h3 id="org2cf220c">검색 패턴</h3>
+<div class="outline-text-3" id="text-org2cf220c">
 <p>
 찾을 패턴으로 와일드카드를 사용할 수도 있다.
 </p>
@@ -123,9 +123,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org2c16f47" class="outline-3">
-<h3 id="org2c16f47">대소문자 무시하기</h3>
-<div class="outline-text-3" id="text-org2c16f47">
+<div id="outline-container-org679d6ad" class="outline-3">
+<h3 id="org679d6ad">대소문자 무시하기</h3>
+<div class="outline-text-3" id="text-org679d6ad">
 <p>
 기본적으로 이 도구는 대소문자를 가린다.
 만약 대소문자를 가리지 않으려면 <code>iname</code> 옵션을 사용할 수 있다.
@@ -136,9 +136,9 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org1361148" class="outline-3">
-<h3 id="org1361148">검색 종류 지정하기</h3>
-<div class="outline-text-3" id="text-org1361148">
+<div id="outline-container-org648b6ee" class="outline-3">
+<h3 id="org648b6ee">검색 종류 지정하기</h3>
+<div class="outline-text-3" id="text-org648b6ee">
 <p>
 만약 특정한 종류만 검색하고 싶다면 <code>type</code> 옵션을 사용할 수 있다.
 </p>
@@ -156,9 +156,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org6d70abb" class="outline-3">
-<h3 id="org6d70abb">검색 내용으로 특정 처리하기(exec)</h3>
-<div class="outline-text-3" id="text-org6d70abb">
+<div id="outline-container-org86204ec" class="outline-3">
+<h3 id="org86204ec">검색 내용으로 특정 처리하기(exec)</h3>
+<div class="outline-text-3" id="text-org86204ec">
 <p>
 <code>-exec</code> 옵션은 검색된 내용을 이용해 외부 도구를 실행시킬 수 있게 할 수 있다.
 </p>
@@ -186,10 +186,22 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-</section>
 <div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+</section>
+<div class="side-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
