--- a/note/motion.html
+++ b/note/motion.html
@@ -60,15 +60,15 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org3030325">단축키</a></li>
-<li><a href="#orgdbc4507">팁</a>
+<li><a href="#orge1af401">단축키</a></li>
+<li><a href="#orge96496e">팁</a>
 <ul>
-<li><a href="#org0fba612">효과 적용 시간 보장하기</a></li>
+<li><a href="#org9eb7060">효과 적용 시간 보장하기</a></li>
 </ul>
 </li>
-<li><a href="#orgb0d90ab">기타</a>
+<li><a href="#orgfcea769">기타</a>
 <ul>
-<li><a href="#org1a42b6b">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
+<li><a href="#orgc5cc8b1">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
 </ul>
 </li>
 </ul>
@@ -84,9 +84,9 @@ gtag('config', 'UA-44534026-1');
 그래서 혹자는 "<a href="fcpx.html">Final Cut Pro X</a>과 모션을 같이 써야 완전체다" 라고 말하기도 한다.
 </p>
 
-<div id="outline-container-org3030325" class="outline-2">
-<h2 id="org3030325">단축키</h2>
-<div class="outline-text-2" id="text-org3030325">
+<div id="outline-container-orge1af401" class="outline-2">
+<h2 id="orge1af401">단축키</h2>
+<div class="outline-text-2" id="text-orge1af401">
 <dl class="org-dl">
 <dt><code>Command D</code></dt><dd>복제(Duplicate)</dd>
 <dt><code>Shift M</code></dt><dd>마커(Marker)</dd>
@@ -94,13 +94,13 @@ gtag('config', 'UA-44534026-1');
 </dl>
 </div>
 </div>
-<div id="outline-container-orgdbc4507" class="outline-2">
-<h2 id="orgdbc4507">팁</h2>
-<div class="outline-text-2" id="text-orgdbc4507">
+<div id="outline-container-orge96496e" class="outline-2">
+<h2 id="orge96496e">팁</h2>
+<div class="outline-text-2" id="text-orge96496e">
 </div>
-<div id="outline-container-org0fba612" class="outline-3">
-<h3 id="org0fba612">효과 적용 시간 보장하기</h3>
-<div class="outline-text-3" id="text-org0fba612">
+<div id="outline-container-org9eb7060" class="outline-3">
+<h3 id="org9eb7060">효과 적용 시간 보장하기</h3>
+<div class="outline-text-3" id="text-org9eb7060">
 <p>
 타이틀 템플릿은 프로젝트 기본 설정과는 다르게 마음껏 늘여서 쓸 수도 있다.
 이럴 경우 애니메이션 등의 효과도 같이 늘어나게 되는데, 이 애니메이션 시간을 원래 프로젝트에서 만든 시간으로 보정할 수 있다.
@@ -118,13 +118,13 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-orgb0d90ab" class="outline-2">
-<h2 id="orgb0d90ab">기타</h2>
-<div class="outline-text-2" id="text-orgb0d90ab">
+<div id="outline-container-orgfcea769" class="outline-2">
+<h2 id="orgfcea769">기타</h2>
+<div class="outline-text-2" id="text-orgfcea769">
 </div>
-<div id="outline-container-org1a42b6b" class="outline-3">
-<h3 id="org1a42b6b">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
-<div class="outline-text-3" id="text-org1a42b6b">
+<div id="outline-container-orgc5cc8b1" class="outline-3">
+<h3 id="orgc5cc8b1">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
+<div class="outline-text-3" id="text-orgc5cc8b1">
 <p>
 아직 버그인지 모르겠지만, <a href="macos.html">macOS</a>를 한국어로 설정해서 사용하는 경우
 한글로 된 폰트가 폰트 목록에서 누락되는 경우가 있다.
@@ -134,10 +134,22 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-</section>
 <div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+</section>
+<div class="side-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
