--- a/note/nextstep.html
+++ b/note/nextstep.html
@@ -79,10 +79,22 @@ OS X이나 macOS의 전신인 만큼,
 특히 Core Foundation 쪽의 클래스들이 전부 <code>NS</code> 라는 이름으로 시작한다는 것이 가장 인상에 남는다.
 물론 NS는 NeXTSTEP의 약자임을 쉽게 알 수 있다.
 </p>
-</section>
 <div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+</section>
+<div class="side-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
