--- a/note/org-spreadsheet.html
+++ b/note/org-spreadsheet.html
@@ -60,7 +60,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org83a3cd7">외부 링크</a></li>
+<li><a href="#org6b936db">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -78,18 +78,30 @@ gtag('config', 'UA-44534026-1');
 글을 참고하자.
 </p>
 
-<div id="outline-container-org83a3cd7" class="outline-2">
-<h2 id="org83a3cd7">외부 링크</h2>
-<div class="outline-text-2" id="text-org83a3cd7">
+<div id="outline-container-org6b936db" class="outline-2">
+<h2 id="org6b936db">외부 링크</h2>
+<div class="outline-text-2" id="text-org6b936db">
 <ul class="org-ul">
 <li><a target="_blank" href="https://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html">🌏Org as a spreadsheet system: a short introduction</a></li>
 </ul>
 </div>
 </div>
-</section>
 <div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+</section>
+<div class="side-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
