--- a/note/special-char-name.html
+++ b/note/special-char-name.html
@@ -153,19 +153,31 @@ gtag('config', 'UA-44534026-1');
 </tbody>
 </table>
 
-<div id="outline-container-org7344f37" class="outline-2">
-<h2 id="org7344f37">참고</h2>
-<div class="outline-text-2" id="text-org7344f37">
+<div id="outline-container-orga9c2788" class="outline-2">
+<h2 id="orga9c2788">참고</h2>
+<div class="outline-text-2" id="text-orga9c2788">
 <ul class="org-ul">
 <li>Apostrophe와 작은 따옴표는 원래 용도가 다르다.
 키보드에서 같은 키로 입력하기 때문에 이렇게 적었을 뿐이니 오해하지 말자.</li>
 </ul>
 </div>
 </div>
-</section>
 <div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+</section>
+<div class="side-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
