--- a/note/tmux.html
+++ b/note/tmux.html
@@ -60,20 +60,20 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org88e7558">사용법</a></li>
-<li><a href="#org84d8398">설정 방법</a>
+<li><a href="#orgc7d558b">사용법</a></li>
+<li><a href="#orgd0f72fd">설정 방법</a>
 <ul>
-<li><a href="#org1f9cef9">리더 키(Prefix) 변경하기</a></li>
+<li><a href="#orgc61b88a">리더 키(Prefix) 변경하기</a></li>
 </ul>
 </li>
-<li><a href="#orgaf68d2e">단축키</a></li>
-<li><a href="#orgce0da6f">기타 팁</a>
+<li><a href="#org3187186">단축키</a></li>
+<li><a href="#orga7d3cca">기타 팁</a>
 <ul>
-<li><a href="#org6eb9b74">선택 영역 복사하기</a></li>
-<li><a href="#orge312c67">종료하지 않고 설정 다시 읽어 들이기</a></li>
+<li><a href="#org81fbc76">선택 영역 복사하기</a></li>
+<li><a href="#org52d0b50">종료하지 않고 설정 다시 읽어 들이기</a></li>
 </ul>
 </li>
-<li><a href="#org16e53d0">관련된 글들</a></li>
+<li><a href="#org5e4fe76">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -87,9 +87,9 @@ Tmux 는 터미널 멀티플렉서라고 불리는 도구다.
 비슷하면서도 원조 격인 <code>screen</code> 이라는 도구에 영향을 많이 받은 것으로 보인다.
 </p>
 
-<div id="outline-container-org88e7558" class="outline-2">
-<h2 id="org88e7558">사용법</h2>
-<div class="outline-text-2" id="text-org88e7558">
+<div id="outline-container-orgc7d558b" class="outline-2">
+<h2 id="orgc7d558b">사용법</h2>
+<div class="outline-text-2" id="text-orgc7d558b">
 <p>
 그냥 실행시키면 실행은 된다.
 </p>
@@ -115,16 +115,16 @@ Tmux 는 터미널 멀티플렉서라고 불리는 도구다.
 </div>
 </div>
 </div>
-<div id="outline-container-org84d8398" class="outline-2">
-<h2 id="org84d8398">설정 방법</h2>
-<div class="outline-text-2" id="text-org84d8398">
+<div id="outline-container-orgd0f72fd" class="outline-2">
+<h2 id="orgd0f72fd">설정 방법</h2>
+<div class="outline-text-2" id="text-orgd0f72fd">
 <p>
 <code>~/.tmux.conf</code> 파일에 원하는 설정을 기록할 수 있다.
 </p>
 </div>
-<div id="outline-container-org1f9cef9" class="outline-3">
-<h3 id="org1f9cef9">리더 키(Prefix) 변경하기</h3>
-<div class="outline-text-3" id="text-org1f9cef9">
+<div id="outline-container-orgc61b88a" class="outline-3">
+<h3 id="orgc61b88a">리더 키(Prefix) 변경하기</h3>
+<div class="outline-text-3" id="text-orgc61b88a">
 <p>
 기본 리더키는 <code>^b</code> (Ctrl-B)로 설정되어 있다.
 이걸 바꾸려면, 예를 들어 리더 키를 <code>^\</code> 로 바꾸려면
@@ -154,9 +154,9 @@ set-option -g prefix2 C-']'
 </div>
 </div>
 </div>
-<div id="outline-container-orgaf68d2e" class="outline-2">
-<h2 id="orgaf68d2e">단축키</h2>
-<div class="outline-text-2" id="text-orgaf68d2e">
+<div id="outline-container-org3187186" class="outline-2">
+<h2 id="org3187186">단축키</h2>
+<div class="outline-text-2" id="text-org3187186">
 <p>
 아래에 언급하는 모든 단축키는 리더 키(Prefix)를 먼저 누른 후 눌러야 한다.
 참고로 리더 키는 앞서 언급한 대로
@@ -179,13 +179,13 @@ set-option -g prefix2 C-']'
 </dl>
 </div>
 </div>
-<div id="outline-container-orgce0da6f" class="outline-2">
-<h2 id="orgce0da6f">기타 팁</h2>
-<div class="outline-text-2" id="text-orgce0da6f">
+<div id="outline-container-orga7d3cca" class="outline-2">
+<h2 id="orga7d3cca">기타 팁</h2>
+<div class="outline-text-2" id="text-orga7d3cca">
 </div>
-<div id="outline-container-org6eb9b74" class="outline-3">
-<h3 id="org6eb9b74">선택 영역 복사하기</h3>
-<div class="outline-text-3" id="text-org6eb9b74">
+<div id="outline-container-org81fbc76" class="outline-3">
+<h3 id="org81fbc76">선택 영역 복사하기</h3>
+<div class="outline-text-3" id="text-org81fbc76">
 <p>
 마우스로 드래그 해서 <code>^C</code> 혹은 Command-C 를 눌렀는데 복사가 안 된다면
 <code>^W</code> (Ctrl+W)를 눌러보자.
@@ -199,9 +199,9 @@ set-option -g prefix2 C-']'
 </p>
 </div>
 </div>
-<div id="outline-container-orge312c67" class="outline-3">
-<h3 id="orge312c67">종료하지 않고 설정 다시 읽어 들이기</h3>
-<div class="outline-text-3" id="text-orge312c67">
+<div id="outline-container-org52d0b50" class="outline-3">
+<h3 id="org52d0b50">종료하지 않고 설정 다시 읽어 들이기</h3>
+<div class="outline-text-3" id="text-org52d0b50">
 <p>
 tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 리더 키(Prefix)를 누르고 아래 커맨드를 입력해 보자.
@@ -229,9 +229,9 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 </div>
 </div>
 </div>
-<div id="outline-container-org16e53d0" class="outline-2">
-<h2 id="org16e53d0">관련된 글들</h2>
-<div class="outline-text-2" id="text-org16e53d0">
+<div id="outline-container-org5e4fe76" class="outline-2">
+<h2 id="org5e4fe76">관련된 글들</h2>
+<div class="outline-text-2" id="text-org5e4fe76">
 <ul class="org-ul">
 <li><a target="_blank" href="https://github.com/gpakosz/.tmux">🌏🇫🇷 Oh My Tmux! Pretty &amp; versatile tmux configuration</a>:
 잘 만들어진 설정을 공유하고 있으며 그대로 쓰기에도 괜찮고
@@ -239,10 +239,22 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 </ul>
 </div>
 </div>
-</section>
 <div class="mid-ad-container">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+</section>
+<div class="side-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
      data-ad-slot="4306465772"
